another attempt at fixing alignment issues for stories

--- a/dev/static/css/style.css
+++ b/dev/static/css/style.css
@@ -6,14 +6,14 @@
   -ms-transform: translateY(-50%);
   transform: translateY(-50%); }
 
-#debrief p, #story-content {
-  width: 70%;
+#debrief p, #story-content, #icon-content {
   margin-left: auto;
   margin-right: auto; }
 
 /*************** INDEX PAGE ***/
 #banner {
-  background: #FFFFFC url("../img/banner_placeholder.jpg") no-repeat right top;
+  background: #FFFFFC url("../img/banner_placeholder.jpg") no-repeat;
+  background-size: cover;
   width: 100%;
   min-height: 400px;
   border-bottom: 5px solid #8BBEC1; }
@@ -22,7 +22,8 @@
   height: 200px;
   background-color: #FFFFFC; }
   #debrief p {
-    font-size: 1.125em; }
+    font-size: 1.125em;
+    width: 70%; }
 
 #specials, #locationHours {
   height: 380px;
@@ -38,13 +39,17 @@
 
 #storiesPreview {
   height: 280px;
-  background: linear-gradient(rgba(255, 255, 252, 0.9), rgba(255, 255, 252, 0.9)), url("../img/bg_pholder.jpg") no-repeat fixed center center; }
+  background: linear-gradient(rgba(255, 255, 252, 0.9), rgba(255, 255, 252, 0.9)), url("../img/bg_pholder.jpg") no-repeat fixed;
+  background-size: cover; }
 
-.story {
-  width: 33%;
-  display: inline-block;
-  /* padding-left: 3%;
-  padding-right: 3%; */ }
+#story-content {
+  width: 80%;
+  text-align: center; }
+
+.story p {
+  width: 200px;
+  padding: 0px 3em;
+  display: inline-block; }
 
 #hours, #location {
   width: 38%;
@@ -57,9 +62,7 @@
   background-color: #FFFFFC; }
 
 #icon-content {
-  width: 40%;
-  margin-right: auto;
-  margin-left: auto; }
+  width: 40%; }
   #icon-content img {
     padding: 3%; }
 
@@ -174,8 +177,7 @@
   -ms-transform: translateY(-50%);
   transform: translateY(-50%); }
 
-#debrief p, #story-content {
-  width: 70%;
+#debrief p, #story-content, #icon-content {
   margin-left: auto;
   margin-right: auto; }
 
