--- a/dev/static/scss/_variables.scss
+++ b/dev/static/scss/_variables.scss
@@ -29,7 +29,6 @@ $header-link-font: "Montserrat", "Helvetica Neue", sans-serif;
 }
 
 %horizontal-align {
-	width: 70%;
 	margin-left: auto;
 	margin-right: auto;
 }
