--- a/dev/static/scss/index.scss
+++ b/dev/static/scss/index.scss
@@ -1,6 +1,7 @@
 /*************** INDEX PAGE ***/
 #banner {
-	background: $off-white url('../img/banner_placeholder.jpg') no-repeat right top;
+	background: $off-white url('../img/banner_placeholder.jpg') no-repeat;
+	background-size: cover;
 	width: 100%;
 	min-height: 400px;
 	border-bottom: 5px solid $dark-blue;
@@ -12,6 +13,7 @@
 	background-color: $off-white;
 	p {
 		font-size: 1.125em;
+		width: 70%;
 		@extend %horizontal-align;
 		@extend %vertical-align;
 	}
@@ -41,19 +43,23 @@
 #storiesPreview {
 	height: 280px;
 	background: linear-gradient(rgba(255, 255, 252, 0.9), rgba(255, 255, 252, 0.9)),
-		url('../img/bg_pholder.jpg') no-repeat fixed center center;
+		url('../img/bg_pholder.jpg') no-repeat fixed;
+	background-size: cover;
 }
 
 #story-content {
-	@extend #section-content;
+	@extend %vertical-align;
 	@extend %horizontal-align;
+	width: 80%;
+	text-align: center;
 }
 
 .story {
-	width: 33%;
-	display: inline-block;
-	/* padding-left: 3%;
-	padding-right: 3%; */
+	p {
+		width: 200px;
+		padding: 0px 3em;
+		display: inline-block;
+	}
 }
 
 // Location and Hours section
@@ -78,8 +84,7 @@
 #icon-content {
 	@extend %vertical-align;
 	width: 40%;
-	margin-right: auto;
-	margin-left: auto;
+	@extend %horizontal-align;
 	img {
 		padding: 3%;
 	}
